// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`type scale > renders at the expected sizes on phone large 430x932 1`] = `
{
  ".brand-sub": 9,
  ".brand-title": 17,
  ".entry-btn-kind": 8,
  ".entry-btn-num": 39,
  ".entry-label": 9,
  ".last-point-label": 8,
  ".last-point-name": 30,
  ".last-point-value": 30,
  ".primary-btn": 13,
  ".round-chip-head": 9,
  ".round-chip-score": 13,
  ".score-box": 125,
  ".section-title": 10,
  ".stat-label": 7,
  ".stat-value": 12,
  ".team-player": 32,
  ".team-player2": 24,
}
`;

exports[`type scale > renders at the expected sizes on phone short 390x760 1`] = `
{
  ".brand-sub": 8,
  ".brand-title": 15,
  ".entry-btn-kind": 8,
  ".entry-btn-num": 33,
  ".entry-label": 9,
  ".last-point-label": 7,
  ".last-point-name": 26,
  ".last-point-value": 26,
  ".primary-btn": 13,
  ".round-chip-head": 9,
  ".round-chip-score": 13,
  ".score-box": 105,
  ".section-title": 9,
  ".stat-label": 7,
  ".stat-value": 12,
  ".team-player": 28,
  ".team-player2": 21,
}
`;

exports[`type scale > renders at the expected sizes on phone tall 390x844 1`] = `
{
  ".brand-sub": 9,
  ".brand-title": 17,
  ".entry-btn-kind": 8,
  ".entry-btn-num": 35,
  ".entry-label": 9,
  ".last-point-label": 8,
  ".last-point-name": 30,
  ".last-point-value": 30,
  ".primary-btn": 13,
  ".round-chip-head": 9,
  ".round-chip-score": 13,
  ".score-box": 113,
  ".section-title": 10,
  ".stat-label": 7,
  ".stat-value": 12,
  ".team-player": 32,
  ".team-player2": 24,
}
`;

exports[`type scale > renders at the expected sizes on small phone 360x640 1`] = `
{
  ".brand-sub": 8,
  ".brand-title": 15,
  ".entry-btn-kind": 8,
  ".entry-btn-num": 31,
  ".entry-label": 9,
  ".last-point-label": 7,
  ".last-point-name": 26,
  ".last-point-value": 26,
  ".primary-btn": 13,
  ".round-chip-head": 9,
  ".round-chip-score": 13,
  ".score-box": 97,
  ".section-title": 9,
  ".stat-label": 7,
  ".stat-value": 12,
  ".team-player": 28,
  ".team-player2": 21,
}
`;

exports[`type scale > renders at the expected sizes on tablet 768x1024 1`] = `
{
  ".brand-sub": 11,
  ".brand-title": 20,
  ".entry-btn-kind": 13,
  ".entry-btn-num": 46,
  ".entry-label": 12,
  ".last-point-label": 9,
  ".last-point-name": 17,
  ".last-point-value": 18,
  ".primary-btn": 15,
  ".round-chip-head": 10,
  ".round-chip-score": 15,
  ".score-box": 116,
  ".section-title": 11,
  ".stat-label": 7,
  ".stat-value": 14,
  ".team-player": 20,
  ".team-player2": 17,
}
`;
